--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "cookie-es": "1.0.0",
     "dayjs": "^1.11.11",
     "eslint-plugin-regexp": "2.2.0",
+    "i": "^0.3.7",
     "jwt-decode": "4.0.0",
     "mapbox-gl": "3.1.2",
+    "npm": "^10.8.1",
     "ofetch": "1.3.3",
+    "pdf-vue3": "^1.0.12",
     "pinia": "2.1.7",
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
@@ -53,9 +56,12 @@
     "vue-prism-component": "2.0.0",
     "vue-router": "4.3.0",
     "vue3-apexcharts": "1.5.2",
+    "vue3-pdf-app": "^1.0.3",
     "vue3-perfect-scrollbar": "1.6.1",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "3.5.2",
-    "webfontloader": "1.6.28"
+    "webfontloader": "1.6.28",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "0.43.1",
