--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.7.2",
     "chart.js": "4.4.2",
     "cookie-es": "1.0.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "eslint-plugin-regexp": "2.2.0",
     "i": "^0.3.7",
