--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dayjs": "^1.11.11",
     "eslint-plugin-regexp": "2.2.0",
     "i": "^0.3.7",
-    "jwt-decode": "4.0.0",
+    "jwt-decode": "^4.0.0",
     "mapbox-gl": "3.1.2",
     "npm": "^10.8.1",
     "ofetch": "1.3.3",
