--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,7 +68,8 @@
     "./src/**/*.vue",
     "./themeConfig.ts",
     "./auto-imports.d.ts",
-    "./components.d.ts"
+    "./components.d.ts",
+    "src/plugins/casl"
   ],
   "exclude": [
     "./dist",
